--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,8 @@
 cmake_minimum_required(VERSION 3.18)
 
-set(DISP_src
-  "GraphicsHandler.cpp"
-  CACHE STRING "All source files of DISP"
-)
-
-add_library(DISP ${DISP_src})
+add_library(DISP GraphicsHandler.cpp Image.cpp RgbBuffer.cpp)
 
 target_include_directories(DISP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # imgui contains glfw
-target_link_libraries(DISP PUBLIC imgui implot glad)
+target_link_libraries(DISP PUBLIC DISP_lib)
