Added optional dependencies and moved some files

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -26,7 +26,7 @@ if(DISP_dep_implot)
   target_link_libraries(DISP_lib INTERFACE implot)
 endif()
 
-option(DISP_stb "include stb in build" OFF)
+option(DISP_stb "include stb in build" ON)
 if(DISP_stb)
     include(stb.cmake)
     target_link_libraries(DISP_lib INTERFACE stb)
@@ -38,3 +38,14 @@ if(DISP_entt)
     target_link_libraries(DISP_lib INTERFACE entt)
 endif()
 
+option(DISP_python "include python and pybind in build" OFF)
+if(DISP_python)
+    include(pybind11.cmake)
+    target_link_libraries(DISP_lib INTERFACE pybind11::embed)
+endif()
+
+option(DISP_rang "include rang in build" OFF)
+if(DISP_rang)
+    include(rang.cmake)
+    target_link_libraries(DISP_lib INTERFACE rang)
+endif()
