--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-add_library(DISP GraphicsHandler.cpp Image.cpp RgbBuffer.cpp)
+add_library(DISP disp/GraphicsHandler.cpp disp/Image.cpp disp/RgbBuffer.cpp disp.h disp/python.h)
 
 target_include_directories(DISP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
